--- a/src/pages/single-server/style.scss
+++ b/src/pages/single-server/style.scss
@@ -11,7 +11,11 @@
     box-sizing: border-box;
     overflow: hidden;
     background-color: #0E131E;
-    padding: px-to-rem(16) px-to-rem(32);
+    padding: px-to-rem(16) px-to-rem(16);
+
+    @include respond-to(md) {
+        padding: px-to-rem(16) px-to-rem(32);
+    }
 
     &__title {
         font-size: px-to-rem(32);
@@ -23,6 +27,4 @@
             color: #FFC107;
         }
     }
-
-    @include respond-to(md) {}
 }
